# aya

./: rustc-ice-2026-05-27T13_57_50-191351.txt
.github/scripts/: download_kernel_images.sh
aya/: Cargo.toml
aya-build/: Cargo.toml
aya-ebpf-macros/: Cargo.toml
aya-log/: Cargo.toml
aya-obj/: Cargo.toml
aya-obj/include/: linux_wrapper.h
aya-obj/src/: relocation.rs
aya/src/: bpf.rs
aya/src/maps/: inode_storage.rs  mod.rs
aya/src/programs/: perf_event.rs
ebpf/aya-ebpf/: Cargo.toml
ebpf/aya-ebpf-bindings/: Cargo.toml
ebpf/aya-ebpf-cty/: Cargo.toml
ebpf/aya-ebpf/src/btf_maps/: inode_storage.rs  mod.rs
ebpf/aya-ebpf/src/maps/: inode_storage.rs  mod.rs
ebpf/aya-log-ebpf/: Cargo.toml
test/integration-common/: Cargo.toml
test/integration-ebpf/: Cargo.toml
test/integration-test/: Cargo.toml
test/integration-test/src/tests/: perf_event_bp.rs
xtask/public-api/: aya-ebpf.txt  aya-obj.txt  aya.txt
xtask/src/: run.rs
xtask/src/codegen/: aya.rs
