[package]
description = "Bindings for Linux Kernel eBPF types and helpers"
name = "aya-friday-ebpf-bindings"
version = "0.1.2"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aya-ebpf-cty = { version = "^0.2.3", path = "../aya-ebpf-cty", package = "aya-friday-ebpf-cty" }

[build-dependencies]
aya-build = { version = "^0.1.3", path = "../../aya-build", package = "aya-friday-build" }
