[package]
description = "A library for writing eBPF programs"
name = "aya-friday-ebpf"
version = "0.1.2"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aya-ebpf-bindings = { version = "^0.1.2", path = "../aya-ebpf-bindings", package = "aya-friday-ebpf-bindings" }
aya-ebpf-cty = { version = "^0.2.3", path = "../aya-ebpf-cty", package = "aya-friday-ebpf-cty" }
aya-ebpf-macros = { version = "^0.1.2", path = "../../aya-ebpf-macros", package = "aya-friday-ebpf-macros" }

[build-dependencies]
aya-build = { version = "^0.1.3", path = "../../aya-build", package = "aya-friday-build" }
rustversion = { workspace = true }
